--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Header end -->
 
     <!-- Banner -->
-    <div class="banner">
+    <div class="banner py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-12">
@@ -87,6 +87,119 @@
                     <button class="d-block m-auto bg-dark text-white">Read more</button>
                 </div>
 
+            </div>
+        </div>
+    </div>
+    <!-- About end -->
+
+    <!-- Services -->
+    <div class="services py-3">
+        <div class="container">
+            <div class="col-md-12">
+                <h1 class="text-white text-center font-weight-bolder">Best Services</h1>
+                <p class="text-white text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut minus reiciendis incidunt dignissimos aliquam corrupti sequi voluptatibus et, eius repudiandae!</p>
+            </div>
+
+            <!-- First row -->
+            <div class="row my-5">
+                <div class="col-md-4 text-center">
+                    <div class="box p-3 my-3">
+                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/database.png" alt="">
+                        <h3 class="text-white">Shered Hosting</h3>
+                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate iure ex dolore autem tempora.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="box p-3 my-3">
+                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/database.png" alt="">
+                        <h3 class="text-white">Shered Hosting</h3>
+                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate iure ex dolore autem tempora.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="box p-3 mt-3">
+                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/database.png" alt="">
+                        <h3 class="text-white">Shered Hosting</h3>
+                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate iure ex dolore autem tempora.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- First row end -->
+
+            <!-- Second row -->
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <div class="box p-3 mb-3">
+                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/database.png" alt="">
+                        <h3 class="text-white">Shered Hosting</h3>
+                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate iure ex dolore autem tempora.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="box p-3 my-3">
+                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/database.png" alt="">
+                        <h3 class="text-white">Shered Hosting</h3>
+                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate iure ex dolore autem tempora.</p>
+                    </div>
+                </div>
+                <div class="col-md-4 text-center">
+                    <div class="box p-3 my-3">
+                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/database.png" alt="">
+                        <h3 class="text-white">Shered Hosting</h3>
+                        <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate iure ex dolore autem tempora.</p>
+                    </div>
+                </div>
+            </div>
+            <!-- Second row end -->
+        </div>
+    </div>
+    <!-- Services end -->
+
+
+    <!-- Strategy -->
+    <div class="strategy py-3">
+        <div class="container">
+            <div class="col-md-12 text-center">
+                <h1>Why You should choose</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius beatae exercitationem quaerat animi accusantium voluptatibus quae, est quidem maiores quod modi molestiae quo dolore neque ullam sed. Nihil, natus incidunt.</p>
+            </div>
+
+            <div class="row">
+                <div class="col-md-4 col-sm-12 my-3">
+                    <div class="box text-center p-3 m-auto">
+                        <div class="inner">
+                            <img class="my-4" src="./img/recharge.png" alt="">
+                            <h3>Powerfull Features</h3>
+                            <p class="pb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, voluptatem enim soluta nemo, quaerat excepturi adipisci tempora, repellat praesentium impedit provident debitis facilis aspernatur.</p>
+                        </div>
+
+                        <button class="bg-dark text-white">Read more</button>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-12 my-3">
+                    <div class="box text-center p-3 m-auto">
+                        <div class="inner">
+                            <img class="my-4" src="./img/recharge.png" alt="">
+                            <h3>Powerfull Features</h3>
+                            <p class="pb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, voluptatem enim soluta nemo, quaerat excepturi adipisci tempora, repellat praesentium impedit provident debitis facilis aspernatur.</p>
+                        </div>
+
+                        <button class="bg-dark text-white">Read more</button>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-12 my-3">
+                    <div class="box text-center p-3 m-auto">
+                        <div class="inner">
+                            <img class="my-4" src="./img/recharge.png" alt="">
+                            <h3>Powerfull Features</h3>
+                            <p class="pb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, voluptatem enim soluta nemo, quaerat excepturi adipisci tempora, repellat praesentium impedit provident debitis facilis aspernatur.</p>
+                        </div>
+
+                        <button class="bg-dark text-white">Read more</button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
