--- a/index.html
+++ b/index.html
@@ -111,15 +111,15 @@
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="box p-3 my-3">
-                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/database.png" alt="">
-                        <h3 class="text-white">Shered Hosting</h3>
+                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/brain.png" alt="">
+                        <h3 class="text-white">Dedicated hosting</h3>
                         <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate iure ex dolore autem tempora.</p>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="box p-3 mt-3">
-                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/database.png" alt="">
-                        <h3 class="text-white">Shered Hosting</h3>
+                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/cloud_service.png" alt="">
+                        <h3 class="text-white">Domain Registration</h3>
                         <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate iure ex dolore autem tempora.</p>
                     </div>
                 </div>
@@ -129,23 +129,23 @@
             <!-- Second row -->
             <div class="row">
                 <div class="col-md-4 text-center">
-                    <div class="box p-3 mb-3">
-                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/database.png" alt="">
-                        <h3 class="text-white">Shered Hosting</h3>
+                    <div class="box p-3 my-3">
+                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/download.png" alt="">
+                        <h3 class="text-white">VPS hosting</h3>
                         <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate iure ex dolore autem tempora.</p>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="box p-3 my-3">
-                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/database.png" alt="">
-                        <h3 class="text-white">Shered Hosting</h3>
+                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/cloud_server.png" alt="">
+                        <h3 class="text-white">Cloud hosting</h3>
                         <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate iure ex dolore autem tempora.</p>
                     </div>
                 </div>
                 <div class="col-md-4 text-center">
                     <div class="box p-3 my-3">
-                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/database.png" alt="">
-                        <h3 class="text-white">Shered Hosting</h3>
+                        <img class="mb-4 p-3 bg-white rounded-circle" src="./img/server.png" alt="">
+                        <h3 class="text-white">Reseller hosting</h3>
                         <p class="text-white">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci voluptate iure ex dolore autem tempora.</p>
                     </div>
                 </div>
@@ -180,8 +180,8 @@
                 <div class="col-md-4 col-sm-12 my-3">
                     <div class="box text-center p-3 m-auto">
                         <div class="inner">
-                            <img class="my-4" src="./img/recharge.png" alt="">
-                            <h3>Powerfull Features</h3>
+                            <img class="my-4" src="./img/search.png" alt="">
+                            <h3>Total Optimised</h3>
                             <p class="pb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, voluptatem enim soluta nemo, quaerat excepturi adipisci tempora, repellat praesentium impedit provident debitis facilis aspernatur.</p>
                         </div>
 
@@ -192,8 +192,8 @@
                 <div class="col-md-4 col-sm-12 my-3">
                     <div class="box text-center p-3 m-auto">
                         <div class="inner">
-                            <img class="my-4" src="./img/recharge.png" alt="">
-                            <h3>Powerfull Features</h3>
+                            <img class="my-4" src="./img/call_service.png" alt="">
+                            <h3>Worldwide Support</h3>
                             <p class="pb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, voluptatem enim soluta nemo, quaerat excepturi adipisci tempora, repellat praesentium impedit provident debitis facilis aspernatur.</p>
                         </div>
 
@@ -203,6 +203,35 @@
             </div>
         </div>
     </div>
+    <!-- Strategy end -->
+
+    <!-- Contact -->
+    <div class="contact">
+        <div class="container">
+            <div class="col-md-12">
+                <form action="" class="p-3 m-auto">
+                    <input type="text" name="" id="" placeholder="Name">
+                    <input type="email" name="" id="" placeholder="Email">
+                    <input type="text" name="" id="" placeholder="Phone">
+                    <input type="text" name="" id="" placeholder="Massage">
+                    <input type="submit" value="Send">
+                </form>
+            </div>
+
+            <div class="col-md-12 text-white py-5 text-center detail">
+                <h2 class="top">Contact now</h2>
+                <h2>Free Multipurpose Responsive Landing Page 2021</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis facere placeat maxime aspernatur alias laborum explicabo obcaecati voluptate minus amet voluptatum nemo quisquam nostrum quo, eveniet repudiandae facilis saepe animi!</p>
+            </div>
+        </div>
+    </div>
+    <!-- Contact end -->
+
+
+    <!-- Footer -->
+    <footer class="py-4 text-center">
+        <span>&copy; 2022 Mahmood Hassan Rameem.All Rights Reserved.</span>
+    </footer>
 
 
     
