--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Demo site 2022 by bootstrape</title>
+    <title>Demo site 2022 by bootstrap</title>
 
     <!-- Google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -220,7 +220,7 @@
 
             <div class="col-md-12 text-white py-5 text-center detail">
                 <h2 class="top">Contact now</h2>
-                <h2>Free Multipurpose Responsive Landing Page 2021</h2>
+                <h2>Free Multipurpose Responsive Landing Page 2022</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis facere placeat maxime aspernatur alias laborum explicabo obcaecati voluptate minus amet voluptatum nemo quisquam nostrum quo, eveniet repudiandae facilis saepe animi!</p>
             </div>
         </div>
